# clover

./: Makefile  docker-compose.yml
backend/: Dockerfile  initialize.sh  manage.py  pyproject.toml
backend/backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/backend/games/: admin.py  apps.py  models.py  serializers.py  views.py
backend/clover_backend/: asgi.py  settings.py  urls.py  wsgi.py
backend/clover_backend/games/: admin.py  apps.py  serializers.py  views.py
backend/src/clover/: settings.py
backend/src/games/: admin.py  models.py  serializers.py  views.py
backend/src/games/migrations/: 0001_initial.py  0002_board_adult.py
frontend/: package-lock.json  package.json
frontend/src/: api.ts  index.css  index.tsx
frontend/src/pages/: clues.tsx  daily.tsx  guess.tsx  list.tsx
nginx/: nginx.conf
