[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Django backend for clover"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.0.4"
djangorestframework = "^3.13.1"
django-jsonform = "^2.10.1"
psycopg2 = "^2.9.3"
gunicorn = "^20.1.0"
requests = "^2.28.1"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
